refactor: add method (not done)

--- a/core/views/custom-type/posts/index.ejs
+++ b/core/views/custom-type/posts/index.ejs
@@ -1,7 +1,7 @@
 <div class="posts-content">
     <div class="posts-content__heading">
         <h1><%= title; %></h1>
-        <a href="?post_type=post&action=add" class="button-style">Add New</a>
+        <a href="?post_type=post&action=get&state=add" class="button-style">Add New</a>
     </div>
 </div>
 
