feat(core-components): add param name

--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -1,4 +1,4 @@
-<div class="<%= classesName; %>">
-    <p>Please select image Here</p>
+<div data-param="<%= paramName; %>" class="<%= classesName; %>">
+    <p data-param-value>Please select image Here</p>
     <button>Select</button>
 </div>
