--- a/core/views/core-component-type/text.ejs
+++ b/core/views/core-component-type/text.ejs
@@ -1,5 +1,5 @@
-<div class="<%= classesName; %>">
-    <div contenteditable="">
+<div data-param="<%= paramName; %>" class="<%= classesName; %>">
+    <div data-param-value contenteditable="">
         Please edit the content here
     </div>
     <div class="description"> <%= description %></div>
