--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -46,49 +46,46 @@ const getValueFromData = (name) => {
                     <% } %>
                 </div>
 
+                <div>Page Builder</div>
                 <div class="posts__detail-content" data-content>
                     <div class="posts__detail-inner">
 
-                        <div data-component="row" style="text-align:center" data-action="edit">
-                            <div data-component-utils>
-                                <button data-component-action>Duplicate</button>
-                                <button>Move</button>
-                                <button>Remove</button>
+                        <div data-component="wrapper">
+                            <div data-component-content></div>
+                            <div data-component-add>
+                                <button type="button" data-toggle="components">Add</button>
                             </div>
-                            <div data-component-content>
-                                <div data-component="text-editor" data-action="edit">
-                                    <div data-component-content>
-                                        <div data-component-title>Text editor</div>
-                                        <div data-component-description>WYSIWYG Text block</div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <button class="posts-detail-content__add-component button-style" data-component-add
-                                    type="button" data-toggle="components">Add more
-                            </button>
                         </div>
 
-                        <div data-component="row" style="text-align:center">
-                            <div data-component-utils>
-                                <button data-component-action>Duplicate</button>
-                                <button>Move</button>
-                                <button>Remove</button>
-                            </div>
-                            <div data-component-content>
-                                <div data-component="text-editor" data-action="edit">
-                                    <div data-component-content>
-                                        <div data-component-title>Text editor</div>
-                                        <div data-component-description>WYSIWYG Text block</div>
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
 
-                            <button class="posts-detail-content__add-component button-style" data-component-add
-                                    type="button" data-toggle="components">Add more
-                            </button>
+
+                    <div class="posts-detail__components" data-popup data-components>
+                        <div data-popup-overlay data-toggle="components"></div>
+                        <div class="component-popup__inner" data-popup-inner>
+                            <% components.forEach(c => { %>
+                                <button class="posts-detail__component-item"
+                                        data-component="<%= c.name; %>"
+                                        data-action="add"
+                                        data-toggle="components <%= c.name === 'row' ? '' : 'component-panel' %>"
+                                        type="button">
+                                    <div data-component-title><%= c.title; %></div>
+                                    <div data-component-description><%= c.description; %></div>
+                                </button>
+                            <% }); %>
                         </div>
                     </div>
+
+                    <div class="component-popup" data-popup>
+                        <div data-popup-overlay data-toggle="component-panel"></div>
+                        <div class="component-popup__inner" data-popup-inner="">
+                            <div class="component-popup__content"></div>
+                            <button type="button" data-toggle="component-panel" class="component-popup__save">Save
+                            </button>
+                            <button type="button" data-toggle="component-panel">Cancel</button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
@@ -107,26 +104,4 @@ const getValueFromData = (name) => {
         </div>
 
     </form>
-
-    <div class="posts-detail__components" data-popup data-components>
-        <div data-popup-overlay data-toggle="components"></div>
-        <div class="component-popup__inner" data-popup-inner>
-            <% components.forEach(c => { %>
-                <button class="posts-detail__component-item" data-component="<%= c.name; %>" data-action="add"
-                        data-toggle="components component-panel">
-                    <div data-component-title><%= c.title; %></div>
-                    <div data-component-description><%= c.description; %></div>
-                </button>
-            <% }); %>
-        </div>
-    </div>
-
-    <div class="component-popup" data-popup>
-        <div data-popup-overlay data-toggle="component-panel"></div>
-        <div class="component-popup__inner" data-popup-inner="">
-            <div class="component-popup__content"></div>
-            <button data-toggle="component-panel" class="component-popup__save">Save</button>
-            <button data-toggle="component-panel">Cancel</button>
-        </div>
-    </div>
 </div>
