chore: generate dummy JSON

--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -51,7 +51,7 @@ const getValueFromData = (name) => {
                     <div class="posts__detail-inner">
 
                         <div data-component="wrapper">
-                            <div data-component-content></div>
+                            <div data-component-children data-component-content></div>
                             <div data-component-add>
                                 <button type="button" data-toggle="components">Add</button>
                             </div>
