--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -57,6 +57,8 @@ const getValueFromData = (name) => {
                             </div>
                         </div>
 
+                        <div data-generate-component></div>
+
                     </div>
 
 
