--- a/public/posts-type-detail.css
+++ b/public/posts-type-detail.css
@@ -15,17 +15,17 @@
     border-radius:10px; margin-bottom:40px;
 }
 
-[data-content] [data-component] {
+[data-pb] [data-component] {
     text-align:left; font-size:14px; position:relative; min-height:50px;
     background-color:white; padding:5px; border-radius:4px;
 }
-[data-content] [data-component]:not(:last-child) {margin-bottom:10px;}
-[data-content] [data-component-title] {font-weight:700; color:var(--color-secondary);}
-[data-content] [data-component-description] {font-size:13px;}
+[data-pb] [data-component]:not(:last-child) {margin-bottom:10px;}
+[data-pb] [data-component-title] {font-weight:700; color:var(--color-secondary);}
+[data-pb] [data-component-description] {font-size:13px;}
 
-[data-content] [data-component="row"] {border:1px solid var(--color-primary); padding:20px; border-radius:5px; background-color:transparent}
-[data-content] [data-component="row"]:not(:last-child) {margin-bottom:15px;}
+/* row */
+[data-pb] [data-component="row"] {border:1px solid var(--color-primary); padding:20px; border-radius:5px; background-color:transparent}
+[data-pb] [data-component="row"]:not(:last-child) {margin-bottom:15px;}
 
-[data-content] [data-component-utils] {
-    position:absolute; top:0; right:30px; transform:translateY(-50%);
-}
+/* utils */
+[data-pb] [data-component-utils] {position:absolute; top:0; right:30px; transform:translateY(-50%);}
