--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="/posts-type-detail.css">
     <link rel="stylesheet" href="/component-panel.css">
     <script src="/theme.min.js" defer></script>
-    <script src="/posts-detail.js" defer></script>
+    <!--    <script src="/posts-detail.js" defer></script>-->
+    <script src="/new-file.js" defer></script>
 </head>
 <body>
 
