feat: post detail and page builder engine

--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -61,7 +61,8 @@ const getValueFromData = (name) => {
                             </div>
                         </div>
 
-                        <div data-pb-json>generate dummy content</div>
+                        <label for="content">Backend Editor</label>
+                        <textarea id="content" name="content" data-pb-json style="width:100%"></textarea>
                     </div>
 
                     <div data-pb-components-popup data-popup>
