feat: Add media-detail.css

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/posts-type.css">
     <link rel="stylesheet" href="/posts-type-detail.css">
     <link rel="stylesheet" href="/component-panel.css">
+    <link rel="stylesheet" href="/media-detail.css">
     <script src="/theme.min.js" defer></script>
     <script src="/posts-detail.js" defer></script>
 </head>
