--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -53,7 +53,7 @@ const getValueFromData = (name) => {
 
                         <div data-pb-components>
                             <!-- components -->
-                            <div data-component="wrapper">
+                            <div data-component="row" data-component-wrapper>
                                 <div data-component-children data-component-content></div>
                                 <div data-component-add>
                                     <button type="button" data-toggle="components">Add</button>
