--- a/core/views/custom-type/media/index.ejs
+++ b/core/views/custom-type/media/index.ejs
@@ -4,8 +4,9 @@
     <input id="name" type="text" name="name">
     <label for="image">Add Image: </label>
     <input type="file" name="image" accept="*/*" id="image">
-    <button type="submit">Add</button>
+    <button class="button-style" type="submit">Add New</button>
 </form>
+
 <div class="media-list">
     <% data.forEach(media => { %>
         <a href="?post_type=<%= contentType%>&action=edit&id=<%= media._id %>" class="media-item">
