--- a/public/media-detail.css
+++ b/public/media-detail.css
@@ -7,3 +7,15 @@
     align-items: center;
     gap: 10px
 }
+.media-detail{
+    display: flex;
+    gap: 20px;
+}
+.media-detail-name{
+    display: flex;
+    gap: 10px;
+    padding-bottom: 20px;
+}
+.media-detail-name label{
+    min-width: 50px;
+}
