--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/media-detail.css">
     <script src="/theme.min.js" defer></script>
     <script src="/posts-detail.js" defer></script>
+    <script src="/media-detail.js" defer></script>
 </head>
 <body>
 
