--- a/core/views/custom-type/media/index.ejs
+++ b/core/views/custom-type/media/index.ejs
@@ -7,17 +7,23 @@
     <button class="button-style" type="submit">Add New</button>
 </form>
 
-<div class="media-list">
+<div class="media-list" data-media-wrapper>
     <% data.forEach(media => { %>
-        <div data-toggle="media" href="?post_type=<%= contentType%>&action=edit&id=<%= media._id %>" class="media-item">
+        <div class="media-item" data-toggle="media" data-id="<%= media._id %>">
             <h3><%= media.name %></h3>
             <img src="<%= media.url.small %>" alt="<%= media.name %>"/>
         </div>
 
     <% } ) %>
+    <div data-popup>
+        <div data-popup-overlay data-toggle="media"></div>
+        <div data-popup-inner>
+            <img data-media-image src="" alt="">
+            <div data-media-information>
+                <div data-media-name>1</div>
+                <div data-media-url>2</div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div data-popup>
-    <div data-popup-overlay data-toggle="media"></div>
-    <div data-popup-inner>html</div>
-</div>
