refactor: Refactor code

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/posts-type.css">
     <link rel="stylesheet" href="/posts-type-detail.css">
     <link rel="stylesheet" href="/component-panel.css">
-    <link rel="stylesheet" href="/media-detail.css">
+    <link rel="stylesheet" href="/media-popup.css">
     <script src="/theme.min.js" defer></script>
     <script src="/posts-detail.js" defer></script>
     <script src="/media-detail.js" defer></script>
