--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -25,6 +25,7 @@
     <script src="/theme.min.js" defer></script>
     <script src="/posts-detail.js" defer></script>
     <script src="/media-detail.js" defer></script>
+    <script src="/media-popup.js" defer></script>
 </head>
 <body>
 
