--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -20,7 +20,7 @@
                     <div class="upload-file">
                         <img data-preview-media src="" alt="">
                         <label for="input-from-computer" data-param-value>Please select image Here</label>
-                        <input id="input-from-computer" type="file" accept="*/*" data-input-media="">
+                        <input id="input-from-computer" type="file" accept="*/*" name="image" data-input-media="">
                         <button data-save-media-btn type="button">Submit</button>
                     </div>
                 </div>
