--- a/public/popup.css
+++ b/public/popup.css
@@ -5,11 +5,20 @@
     backdrop-filter:blur(5px);
 }
 [data-popup-overlay] {position:fixed; top:0; left:0; right:0; bottom:0;}
+
+[data-popup-overflow] {
+    position:absolute; top:0; left:0; right:0; bottom:0;
+    padding:calc(var(--header-height) + 20px) 20px 20px;
+    display:flex; justify-content:space-between; flex-direction:column; align-items:center; overflow:auto;
+}
+[data-popup-overflow]:before,
+[data-popup-overflow]:after {content:"";}
+
 [data-popup-inner] {
     width:100%; max-width:1180px; height:500px;
     background-color:#fff; padding:20px; border-radius:10px; box-shadow:3px 4px 12px rgba(0, 0, 0, 0.05);
-    position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
 }
+
 
 html:not(.component-panel-is-open) [data-pb-component-popup][data-popup],
 html:not(.components-is-open) [data-pb-components-popup][data-popup],
