--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -4,28 +4,31 @@
         <button data-toggle="media-panel" type="button" class="button-style" data-add-media-btn>+</button>
     </form>
     <div data-pb-media-popup data-popup>
-        <div data-popup-overlay data-toggle="media-panel"></div>
-        <div data-popup-inner="">
-            <form class="form-load-image-content" data-form method="post" action="?post_type=media&method=post&action=add"
-                  enctype="multipart/form-data">
-                <div class="load-file-from-media">
-                    <button id="media-library" type="button">Media Library</button>
-                    <div class="media-list">
-                        <div class="media-item" data-media-item data-id="" data-directory="">
+        <div data-popup-overflow>
+            <div data-popup-overlay data-toggle="media-panel"></div>
+            <div data-popup-inner>
+                <form class="form-load-image-content" data-form method="post"
+                      action="?post_type=media&method=post&action=add"
+                      enctype="multipart/form-data">
+                    <div class="load-file-from-media">
+                        <button id="media-library" type="button">Media Library</button>
+                        <div class="media-list">
+                            <div class="media-item" data-media-item data-id="" data-directory="">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="load-file-from-computer">
-                    <button type="button">Upload Files</button>
-                    <div class="upload-file">
-                        <img data-preview-media src="" alt="">
-                        <label for="input-from-computer" data-param-value>Please select image Here</label>
-                        <input id="input-from-computer" type="file" accept="*/*" name="image" data-input-media="">
-                        <button data-save-media-btn type="button">Submit</button>
+                    <div class="load-file-from-computer">
+                        <button type="button">Upload Files</button>
+                        <div class="upload-file">
+                            <img data-preview-media src="" alt="">
+                            <label for="input-from-computer" data-param-value>Please select image Here</label>
+                            <input id="input-from-computer" type="file" accept="*/*" name="image" data-input-media="">
+                            <button data-save-media-btn type="button">Submit</button>
+                        </div>
                     </div>
-                </div>
-            </form>
-            <button class="button-style">Set image</button>
+                </form>
+                <button class="button-style">Set image</button>
+            </div>
         </div>
 
     </div>
