--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,6 +14,7 @@
           rel="stylesheet">
 
     <link rel="stylesheet" href="/reset.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/admin.css">
     <link rel="stylesheet" href="/popup.css">
     <link rel="stylesheet" href="/header.css">
