--- a/public/media-popup.css
+++ b/public/media-popup.css
@@ -55,10 +55,24 @@ form.form-load-image-content{
 [data-image-loading] img{ opacity: 1}
 [data-image-loading].loading img {opacity: 0;}
 
-
 /* upload input */
-[data-input-media]{
-    display: none;
-}
+[data-input-media]{display: none;}
 
+/**
+* Media popup
+**/
+[data-media-list] {display: flex; flex-wrap: wrap; gap: 1px;}
+[data-media-item] {flex-basis: 100px; flex-grow: 1; flex-shrink: 0;}
 
+[data-media-item] input[type="radio"],
+[data-media-item] input[type="checkbox"] {display: none;}
+
+[data-media-image] {padding: 10px; border: 1px solid transparent; aspect-ratio: 1; transition: all .1s;}
+
+[data-media-list]:hover [data-media-item]  [data-media-image]:not(:hover) {opacity: 0.4;}
+
+[data-media-list]:hover [data-media-item] input[type="radio"]:not(:checked) + [data-media-image]:hover,
+[data-media-item] input[type="radio"]:checked + [data-media-image],
+[data-media-item] input[type="checkbox"]:checked + [data-media-image] {border-color: red;}
+
+[data-media-list]:hover [data-media-item] input[type="radio"]:checked + [data-media-image]:not(:hover) {border-color: transparent;}
