--- a/public/popup.css
+++ b/public/popup.css
@@ -15,7 +15,7 @@
 [data-popup-overflow]:after {content:"";}
 
 [data-popup-inner] {
-    width:100%; max-width:1180px; height:500px; position:relative; z-index:999;
+    width:100%; max-width:1180px; min-height:500px; position:relative; z-index:999; overflow: auto;
     background-color:#fff; padding:20px; border-radius:10px; box-shadow:3px 4px 12px rgba(0, 0, 0, 0.05);
 }
 
