feat: add function to get single domElement Image html

--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -12,10 +12,7 @@
                       enctype="multipart/form-data">
                     <div class="load-file-from-media">
                         <button id="media-library" type="button">Media Library</button>
-                        <div class="media-list">
-                            <div class="media-item" data-media-item data-id="" data-directory="">
-                            </div>
-                        </div>
+                        <div data-media-list></div>
                     </div>
                     <div class="load-file-from-computer">
                         <button type="button">Upload Files</button>
