feat: chang admin.ejs

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -6,27 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Admin</title>
 
-
     <!--  For demo only  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
           rel="stylesheet">
 
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/admin.css">
-    <link rel="stylesheet" href="/popup.css">
-    <link rel="stylesheet" href="/header.css">
-    <link rel="stylesheet" href="/sidebar.css">
-    <link rel="stylesheet" href="/posts-type.css">
-    <link rel="stylesheet" href="/posts-type-detail.css">
-    <link rel="stylesheet" href="/component-panel.css">
-    <link rel="stylesheet" href="/media-popup.css">
-    <script src="/theme.min.js" defer></script>
-    <script src="/posts-detail.js" defer></script>
-    <script src="/media-detail.js" defer></script>
-    <script src="/media-popup.js" defer></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/themes/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/themes/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/themes/favicon-16x16.png">
+    <link rel="manifest" href="/themes/site.webmanifest">
+
+    <link rel="stylesheet" href="/themes/main-be.css">
+    <script src="/themes/main-be.js" defer></script>
 </head>
 <body>
 
